# tessera

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: ci.yml  tessera.build-push.yml
crates/tessera-client/: Cargo.toml
crates/tessera-client/src/: main.rs
crates/tessera-core/: Cargo.toml
crates/tessera-core/src/: lib.rs
crates/tessera-gateway/: Cargo.toml
crates/tessera-gateway/src/: main.rs
crates/tessera-orch/: Cargo.toml
crates/tessera-orch/src/: main.rs
crates/tessera-proto/: Cargo.toml  build.rs
crates/tessera-proto/src/: lib.rs
crates/tessera-sim/: Cargo.toml
crates/tessera-sim/src/: lib.rs  main.rs
crates/tessera-worker/: Cargo.toml
crates/tessera-worker/src/: main.rs
deploy/: docker-compose.yml
deploy/helm/tessera/: Chart.yaml  values.schema.json  values.yaml
deploy/helm/tessera/ci/: scale-out-values.yaml
deploy/helm/tessera/templates/: _helpers.tpl  configmap.yaml  gateway.yaml  orchestrator.yaml  persistence.yaml  worker.yaml
deploy/kubernetes/: tessera-sample.yaml
docs/: README.md  agent-harness.md  completed-milestones.md  contributing.md  dynamic-split-merge.md  handover.md  internal-microk8s-activation-smoke.md  multi-depth-cellid-decision.md  overview.md  p10-runtime-observability-soak-hardening.md  p11-operational-endurance-failure-recovery.md  p5-completion-audit.md  p6-completion-audit.md  p6-durable-split-state.md  p6-internal-rollout-runbook.md  p7-operation-loop.md  p8-closed-loop-operation-cadence.md  p9-operation-control-plane-readiness.md  packaging.md  quality.md  smoke-runbook.md  todo-handover-replay.md  todo-next.md  todo-p12-ops-readiness.md  todo-p13-k8s-packaging.md  todo-p14-runtime-hardening.md  todo-p15-simulation-harness.md  todo-p16-distributed-simulation.md  todo-p17-runtime-trace-correlation.md  todo-p18-packaged-log-format.md  todo-p2-observability-packaging.md  todo-p3-runtime-hardening.md  todo-p4-next-milestones.md
proto/: orchestrator.proto
scripts/: check-agent-harness-interface.sh  check-k8s-packaging.py  check-publication-boundary.py  demo.txt
xtask/: Cargo.toml
xtask/src/: main.rs
