[package]
name = "tessera-client"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "io-std", "time", "fs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
bytes = { workspace = true }
tessera-core = { path = "../tessera-core" }
rustyline = "12"
