[package]
name = "tessera-gateway"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
bytes = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tessera-core = { path = "../tessera-core" }
tessera-proto = { path = "../tessera-proto" }
tonic = { workspace = true }
