[package]
name = "tessera-orch"
version = "0.1.0"
edition.workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tessera-core = { path = "../tessera-core" }
tessera-proto = { path = "../tessera-proto" }
tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
