[package]
name = "tessera-worker"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["signal", "sync"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
tessera-core = { path = "../tessera-core" }
bytes = { workspace = true }
tessera-proto = { path = "../tessera-proto" }
tonic = { workspace = true }
